--- a/SAFEplus/SAFE.Presentacion/Menu.xaml
+++ b/SAFEplus/SAFE.Presentacion/Menu.xaml
@@ -50,7 +50,7 @@
         <Label x:Name="lbBienvenido" Content="Bienvenido/a: " Margin="75,50,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="589"/>
         <Separator HorizontalAlignment="Left" Height="15" Margin="75,97,0,0" VerticalAlignment="Top" Width="650"/>
         <Separator HorizontalAlignment="Left" Height="15" Margin="75,266,0,0" VerticalAlignment="Top" Width="650"/>
-        <Button Content="Próximamente" HorizontalAlignment="Left" Margin="425,300,0,0" VerticalAlignment="Top" Width="125" Background="White" BorderBrush="Black" Height="125" FontSize="16" FontWeight="Bold" Cursor="Hand" Style="{DynamicResource Round}" IsEnabled="False"/>
+        <Button x:Name="btnVisitas" Content="Visitas" HorizontalAlignment="Left" Margin="425,300,0,0" VerticalAlignment="Top" Width="125" Background="White" BorderBrush="Black" Height="125" FontSize="18" FontWeight="Bold" Cursor="Hand" Style="{DynamicResource Round}" Click="btnVisitas_Click"/>
 
     </Grid>
 </Window>
