--- a/SAFEplus/SAFE.Presentacion/Visitas.xaml
+++ b/SAFEplus/SAFE.Presentacion/Visitas.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="Visitas - Safe+" Height="420" Width="800" Icon="Imagenes/Icon3.ico" WindowStartupLocation="CenterScreen">
+        Title="Vista de Visitas - Safe+" Height="420" Width="800" Icon="Imagenes/Icon3.ico" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MyButton" TargetType="{x:Type Button}">
             <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -35,33 +35,33 @@
     </Window.Resources>
     <Grid>
         <Image HorizontalAlignment="Right" Height="45" Margin="0,25,23,0" VerticalAlignment="Top" Width="100" Source="Imagenes/Icon2.png" OpacityMask="Black"/>
-        <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="12" ToolTip="Atrás">
+        <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="9" ToolTip="Atrás">
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
         </Button>
-        <Label Content="Visitas" Margin="287,40,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
+        <Label Content="Vista de Visitas" Margin="287,40,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
         <Separator Height="15" Margin="50,80,50,0" VerticalAlignment="Top"/>
         <TabControl Margin="50,100,50,50">
-            <TabItem Header="Registrar Visita">
+            <TabItem Header="Registrar Visita" TabIndex="0">
                 <Grid Background="#3FFF4D00" Margin="0,0,0,-1">
                     <Label Content="Motivo de la visita:" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" FontSize="16" Width="150"/>
-                    <Button x:Name="btnRegistrar" Content="Registrar" Margin="293,0,0,35" BorderBrush="Black" Background="White" FontSize="16" TabIndex="11" Click="btnRegistrar_Click" Cursor="Hand" Style="{DynamicResource Round}" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Bottom" ToolTip="Registrar cliente"/>
+                    <Button x:Name="btnRegistrar" Content="Registrar" Margin="293,0,0,35" BorderBrush="Black" Background="White" FontSize="16" TabIndex="5" Click="btnRegistrar_Click" Cursor="Hand" Style="{DynamicResource Round}" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Bottom" ToolTip="Registrar cliente"/>
                     <Label Content="RUT Trabajador:" HorizontalAlignment="Left" Margin="361,79,0,0" VerticalAlignment="Top" FontSize="16" Height="31" Width="150"/>
-                    <ComboBox x:Name="cboRutTrabajador1" Margin="511,85,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120"/>
+                    <ComboBox x:Name="cboRutTrabajador1" Margin="511,85,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120" TabIndex="4"/>
                     <Label Content="RUT Cliente:" Margin="25,79,0,0" VerticalAlignment="Top" FontSize="16" Height="30" HorizontalAlignment="Left" Width="150"/>
-                    <ComboBox x:Name="cboRutCliente1" Margin="175,85,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120" IsReadOnly="True" Cursor="Hand"/>
-                    <ComboBox x:Name="cboMotivo" HorizontalAlignment="Left" Margin="175,31,0,0" VerticalAlignment="Top" Width="120"/>
-                    <DatePicker x:Name="dtpFechaVisita" HorizontalAlignment="Right" Margin="0,31,25,0" VerticalAlignment="Top" Height="22" Width="150"/>
+                    <ComboBox x:Name="cboRutCliente1" Margin="175,85,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120" IsReadOnly="True" Cursor="Hand" TabIndex="3"/>
+                    <ComboBox x:Name="cboMotivo" HorizontalAlignment="Left" Margin="175,31,0,0" VerticalAlignment="Top" Width="120" TabIndex="1"/>
+                    <DatePicker x:Name="dtpFechaVisita" HorizontalAlignment="Right" Margin="0,31,25,0" VerticalAlignment="Top" Height="22" Width="150" TabIndex="2"/>
                     <Label Content="Fecha de la visita:" HorizontalAlignment="Left" Margin="361,25,0,0" VerticalAlignment="Top" FontSize="16" Width="150"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Lista de Visitas">
+            <TabItem Header="Lista de Visitas" TabIndex="6">
                 <Grid Background="#3FFF4D00">
                     <Label Content="Buscar por RUT Cliente:" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="16" Height="30" HorizontalAlignment="Left"/>
-                    <ComboBox x:Name="cboRutCliente" Margin="185,16,0,0" VerticalAlignment="Top" BorderBrush="Black" SelectionChanged="cboRutCliente_SelectionChanged" HorizontalAlignment="Left" Width="120"/>
+                    <ComboBox x:Name="cboRutCliente" Margin="185,16,0,0" VerticalAlignment="Top" BorderBrush="Black" SelectionChanged="cboRutCliente_SelectionChanged" HorizontalAlignment="Left" Width="120" TabIndex="7"/>
                     <Label Content="Buscar por RUT Trabajador:" HorizontalAlignment="Left" Margin="355,10,0,0" VerticalAlignment="Top" FontSize="16" Height="30"/>
-                    <ComboBox x:Name="cboRutTrabajador" Margin="556,16,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120" SelectionChanged="cboRutTrabajador_SelectionChanged"/>
+                    <ComboBox x:Name="cboRutTrabajador" Margin="556,16,0,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Left" Width="120" SelectionChanged="cboRutTrabajador_SelectionChanged" TabIndex="8"/>
                     <DataGrid x:Name="dtgVisitas" HorizontalAlignment="Left" Margin="10,50,0,10" Width="666"/>
                 </Grid>
             </TabItem>
